<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/detail_group_flight_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/detail_group_flight_information"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/material_text_title"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/detail_item_flight_plan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_flight_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_flight_plan"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_flight_plan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/detail_default_flight_plan"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_item_description"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_description"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/detail_default_description"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_item_flight_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_flight_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_flight_type"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/text_flight_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:drawSelectorOnTop="true"
                android:entries="@array/array_flight_plan_type"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_item_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_date"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/default_date"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_item_start_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_start_time"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_start_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_item_end_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_end_time"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_end_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/detail_group_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/detail_group_vehicle"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/material_text_title"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/detail_item_aircraft"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_aircraft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_aircraft"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/text_aircraft"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_item_gross_weight"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_gross_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_gross_weight"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_gross_weight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/detail_default_gross_weight"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_item_payload_weight"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_payload_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_payload_weight"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_payload_weight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/detail_default_payload_weight"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_item_fuel_indicator"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_fuel_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_fuel_indicator"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_fuel_indicator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/detail_default_fuel_indicator"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/detail_item_fuel_loading"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_fuel_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_fuel_loading"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_fuel_loading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/detail_default_fuel_loading"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_item_altitude_mode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/background_text_entry"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/label_altitude_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/detail_item_altitude_mode"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/text_altitude_mode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:drawSelectorOnTop="true"
                android:entries="@array/array_altitude_mode"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>